force-app/main/default/objects/Contact/fields/High_Priority__c.field-meta.xml
<CustomField>
    <fullName>High_Priority__c</fullName>
    <formula>IF(
 ISPICKVAL ( Account.CustomerPriority__c, &quot;HIGH&quot; ),
 TRUE,
 FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>High Priority</label>
    <type>Checkbox</type>
</CustomField>