force-app/main/default/objects/Contact/fields/StripeId__c.field-meta.xml
<CustomField>
    <fullName>StripeId__c</fullName>
    <label>StripeId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>