force-app/main/default/objects/Contact/fields/Total_high_Priority_Cases__c.field-meta.xml
<CustomField>
    <fullName>Total_high_Priority_Cases__c</fullName>
    <label>Total high Priority Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>